--- a/package.json
+++ b/package.json
@@ -9,41 +9,42 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "cy:open": "cypress open",
-    "tokens:build": "node src/styles/tokens/compile-design-tokens.cjs",
+    "check-updates": "ncu",
+    "tokens:build": "node src/styles/tokens/append-design-tokens.cjs",
     "registry:build": "shadcn build"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.2",
-    "@stylexjs/stylex": "^0.12.0",
-    "@tailwindcss/vite": "^4.1.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@stylexjs/stylex": "^0.14.2",
+    "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.510.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "shadcn": "^2.7.0-canary.0",
-    "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.6"
+    "shadcn": "^2.9.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.27.1",
-    "@eslint/js": "^9.26.0",
-    "@stylexjs/babel-plugin": "^0.12.0",
-    "@stylexjs/postcss-plugin": "^0.12.0",
-    "@types/node": "^22.15.17",
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
-    "@vitejs/plugin-react": "^4.4.1",
+    "@eslint/js": "^9.31.0",
+    "@stylexjs/babel-plugin": "^0.14.2",
+    "@stylexjs/postcss-plugin": "^0.14.2",
+    "@types/node": "^24.0.14",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.26.0",
+    "eslint": "^9.31.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.1.0",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "tw-animate-css": "^1.2.9",
+    "globals": "^16.3.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tw-animate-css": "^1.3.5",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.32.1",
-    "vite": "^6.3.5"
+    "typescript-eslint": "^8.37.0",
+    "vite": "^7.0.5"
   }
 }
