--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^19.1.0",
     "shadcn": "^2.9.2",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.27.1",
