feat: Add project-wide path aliases
I want to use relative paths a lot less, so setting up path aliases for
my Vite Typescript React project was the solution I choose.

Q: Why do we have to define path aliases in both Vite and TypeScript
config files?
A: Vite needs explicit configuration to resolve aliases during bundling.
TypeScript also needs explicit configuration to resolve aliases in the
IDE and compiler or else you get errors like 'Cannot find module
'@/components/Button' or its corresponding typ declarations'

1. Move TS path alises from tsconfig.json to tsconfig.app.json
I thought it would be too redundant to declare compiler options in
tsconfig.json and tsconfig.json, so I just moved all of my ts path
aliases into tsconfig.app.json. For path aliases in TypeScript to work,
I needed to include the right folders in the "include" property in
tsconfig.app.json.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,8 +24,9 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@components/*": ["./component-lib/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "component-lib", "demo-lib"]
 }
