--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "files": ["dist"],
+  "main": "./dist/compose-layouts.umd.cjs",
+  "module": "./dist/compose-layouts.js",
+  "types": "./dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/compose-layouts.js",
+      "require": "./dist/compose-layouts.umd.cjs"
+    }
+  },
   "scripts": {
     "dev": "vite --host",
     "build": "tsc -b && vite build",
