--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc -b && vite build",
+    "build-lib": "tsc -p component-lib/tsconfig.json && vite build --config vite.config.lib.ts",
     "lint": "eslint .",
     "preview": "vite preview",
     "cy:open": "cypress open",
