feat(package.json): Edit object to help tree-shaking
Explaination for modifications to package.json object:
"main": "./dist/index.js",
"module": "./dist/index.js",
    - Since I'm making a React component library, where the final code
    runs on the web and not in node. I opted to use "module" to indicate
    the entry point to my component library. I've read that the "main"
    indicates the entry point for CommonJS, and I'm not sure whether to
    include it or not, so just to be safe I'm going to include it anyways.

New "exports" key-value:
"exports": {
    ".": {
      "types": "./dist/types/index.d.ts",
      "import": "./dist/index.js"
    },
    "./*": {
      "types": "./dist/types/*.d.ts",
      "import": "./dist/*.js"
    }
},
    - "exports" controls how my component library, is imported into
    other code. These two values I got from ChatGPT, which I've set for
    "exports" give me flexibility by being able to make an import
    statements like this:

    import { OneColumnLayout } from 'compose-layouts'

    Or like this (optional deep imports):

    import { OneColumnLayout } from 'compose-layouts/OneColumnLayout'

"sideEffects": false (explaination obtained from ChatGPT)
    - sideEffects tells Bundlers like Vite that it's allowed to optimize
    the code by removing unused exports, while keeping certain code to
    retain side effects. Since I don't have any CSS in my component
    library, I set "sideEffects" to false. This tells bundlers that it's
    safe to drop unused imports from my component library.

--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   },
   "type": "module",
   "files": ["dist"],
-  "main": "./dist/compose-layouts.umd.cjs",
-  "module": "./dist/compose-layouts.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/types/index.d.ts",
-      "import": "./dist/compose-layouts.js",
-      "require": "./dist/compose-layouts.umd.cjs"
+      "import": "./dist/index.js"
+    },
+    "./*": {
+      "types": "./dist/types/*.d.ts",
+      "import": "./dist/*.js"
     }
   },
+  "sideEffects": false,
   "scripts": {
     "dev": "vite --host",
     "build": "tsc -b && vite build",
