--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "private": true,
   "version": "1.0.0",
   "description": "A React component library that has a set of componen-agnostic layout components that allows you to put components together into a layout",
-  "keywords": ["react", "react-component", "component", "reactjs"],
+  "keywords": [
+    "react",
+    "react-component",
+    "component",
+    "reactjs"
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/BDuong0/compose-layouts"
   },
   "type": "module",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/types/index.d.ts",
@@ -44,8 +51,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
     "shadcn": "^2.9.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
@@ -67,6 +72,8 @@
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tw-animate-css": "^1.3.5",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.37.0",
