feat(package.json): Declare peerDependencies
Declaring peerDependencies is simply stating what npm packages are needed
from the consumer side to have my component library work in their project.

PeerDependencies prevent these things:
- user having two different versions of React
- React hooks from breaking
- my component library from having bloated code

--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     "tokens:build": "node src/styles/tokens/append-design-tokens.cjs",
     "registry:build": "shadcn build"
   },
+  "peerDependencies": {
+    "react": ">=18",
+    "react-dom": ">=18"
+  },
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.2.3",
