--- a/component-lib/tsconfig.json
+++ b/component-lib/tsconfig.json
@@ -4,6 +4,7 @@
     "declaration": true,
     "declarationMap": true,
     "emitDeclarationOnly": true,
+    "noEmit": false,
     "outDir": "../dist/types",
     "jsx": "react-jsx",
     "module": "ESNext",
